--- a/Academics.html
+++ b/Academics.html
@@ -51,23 +51,22 @@
 
         </script> -->
 
+        <br><br><br><br><br><br><br><br><br>
+       
 
-
-
-        <!-- <ul>
-            <li><a href="page-depth-01/General-Info.html">General-Info.html</a></li>
-            <li><a href="page-depth-01/Semesters.html">Semesters.html</a></li>
-        </ul> -->
-        <br><br><br><br><br><br>
-        <br><br>
-
+        <div class="section"
+            data-faq="If you feel like the resources are lacking, and you can solve that, don't be shy and share your resources!">
+            <div class="faq-icon">?</div>
+            <div class="faq-box"></div>
+        </div>
+        <br>
         <div id="upload-section" class="container-5"
             style="border-radius: 15px;background-color: #1B262C;margin-top: 25px;margin: auto;">
 
 
             <p style="text-align: center;color: #ffffffcd;margin-top: -5px;margin-bottom: -5px;">Feeling generous?</p>
 
-            <div class="container-6" style="margin-bottom: 15px;">
+            <div class="container-6" style="margin-bottom: 15px;display: flex;justify-content: center;">
                 <div style="background-color: rgba(0, 0, 0, 0);border-color: rgba(0, 0, 0, 0.034);">
                     <a class="cell-link" href="https://forms.gle/uFq1vBSUbRhY5CZk6" target="_blank"
                         style="color: #ffffff;padding:15%;background-color: #a5ca88;border-radius: 10px;width: 100px;box-shadow: 1px 2px 10px #000000;text-align: center;display: block;text-shadow: 1px 2px 1px #000000;font-size: medium;">
@@ -111,20 +110,21 @@
         </div>
 
 
-        <div class="container-5" style="max-width: 500px;min-width: 300px;background-color: #1B262C;margin-top: 50px;"
+        <div class="container-5" style="max-width: 800px;min-width: 300px;background-color: #1B262C;margin-top: 50px;"
             align=center>
             <table class="resources-table-5" align=center
                 style="width:90%;align-items: center;justify-content: center;">
                 <tr>
-                    <p class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">Find your info
+                    <p class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);margin-bottom: 0px;">
+                        Find your info
                         here</p>
                 </tr>
-                <tr style="margin-top: 0px;margin-bottom: 5px;">
+                <tr>
 
-                    <hr style="border: 5px solid rgba(255, 255, 255, 0.619);
-                      border-radius: 5px;min-width: 200px;width:70%;">
+                    <!-- <hr style="border: 5px solid rgba(255, 255, 255, 0.619);
+                      border-radius: 5px;min-width: 200px;width:70%;"> -->
                     <div class="container-6"
-                        style="background-color: #00000000;margin: auto;justify-content: center;column-gap: 10%;">
+                        style="background-color: #00000000;margin: auto;justify-content: center;column-gap: 10%;margin-bottom: -30px;">
 
                         <div class="menu-button" id="menuButton1"
                             style="background-color: rgba(0, 0, 0, 0.247);height:60px;width:100px;max-width: 300px;">
@@ -173,8 +173,8 @@
 
                         </div>
                     </div>
-                    <hr style="border: 5px solid rgba(255, 255, 255, 0.619);
-                      border-radius: 5px;margin-bottom: 20px;min-width: 200px;width:70%;margin-top: 80px;">
+                    <!-- <hr style="border: 5px solid rgba(255, 255, 255, 0.619);
+                      border-radius: 5px;margin-bottom: 20px;min-width: 200px;width:70%;margin-top: 80px;"> -->
 
 
                 </tr>
@@ -193,7 +193,7 @@
             <div class="faq-box"></div>
         </div>
 
-        <div class="container-5" style="width:76%;max-width: 600px;margin-top: 50px; background-color: #1B262C;">
+        <div class="container-5" style="width:76%;max-width: 800px;margin-top: 50px; background-color: #1B262C;">
 
 
             <!-- -------------------------------------------------------------------- -->
@@ -202,7 +202,8 @@
 
                 <div class="custom-dropdown" id="departmentDropdown" style="margin-top: 20px;width: 100%;
     max-width: 600px;">
-                    <div class="dropdown-header" id="dropdownHeader" style="font-size: 1rem;">Select your Department...
+                    <div class="dropdown-header" id="dropdownHeader"
+                        style="font-size: 1rem;max-width: 500px;margin: auto;">Select Department
                     </div>
 
                     <div class="dropdown-list" id="dropdownList">
@@ -223,8 +224,8 @@
             <hr style="margin-top: 10px;width: 70%;margin: auto;">
             <div class="semester-selector-container">
                 <label style="color: rgba(255, 255, 255, 0.68);">University Course Search</label>
-                <div class="search-container" style="margin-top: 20px;">
-                    <input id="course-search" type="text" class="search-input" placeholder="Search for courses..."
+                <div class="search-container" style="margin-top: 20px;border-color: transparent;max-width: 500px;">
+                    <input id="course-search" type="text" class="search-input" placeholder="Search Courses"
                         autocomplete="off">
                     <div class="search-results"></div>
                 </div>
