--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <link rel="stylesheet" href="css/top.navbar.css">
   <link rel="stylesheet" href="css/faq.dropdown.css">
   <link rel="stylesheet" href="css/faq.tooltip.css">
+  <link rel="stylesheet" href="css/home.css">
 
   <!-- OFFLINE SUPPORT (WEB APP) -->
 
@@ -35,96 +36,19 @@
   <meta property="og:type" content="website">
 
   <!-- WEBSITE PREVIEW -->
-  <style>
-    li {
-      padding: 5px;
-    }
 
-
-    /* HIDE SCROLLBAR */
-    ::-webkit-scrollbar {
-      display: none;
-    }
-  </style>
-
-  <style>
-    table,
-    th,
-    td {
-      border: 2px solid rgba(31, 106, 168, 0);
-      border-radius: 10px;
-    }
-
-    td {
-      min-width: 200px;
-    }
-
-    .parent-wrap {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: space-evenly;
-      gap: 16px;
-      margin: auto;
-      width: 95%;
-      max-width: 500px;
-    }
-
-    .link-logo:hover {
-      transform: translateY(-5px);
-      transition: transform 1s
-    }
-
-    .container-6 {
-      display: grid;
-      place-items: center;
-      grid-template-columns: auto auto;
-      border-radius: 15px;
-      padding: 10px;
-      margin: 20px auto;
-      width: 79%;
-      max-width: 350px;
-      /*the button visibility*/
-      position: relative;
-      column-gap: 30px;
-      row-gap: 12%;
-
-    }
-
-    .container-6 a:hover {
-      transform: translateY(-5px);
-      transition: transform 1s
-    }
-
-    /* .container-6>div {
-            background-color: #f1f1f1;
-            border: 1px solid black;
-            padding: 10px;
-            font-size: 30px;
-            text-align: center;
-        }  */
-
-    .container-6>div>div {
-      background-color: #f1f1f1;
-      border: 1px solid black;
-      padding: 10px;
-      font-size: 30px;
-      text-align: center;
-      /* margin-top: 50px; */
-
-    }
-  </style>
   <title>
     oUITS Resources
   </title>
 </head>
 
-<body style="background-color: #333;z-index: 2;">
+<body style="background-color: #333;z-index: -1;">
 
-  <div style="background-color: #333;display: block;width: 100%;height: 20px;position: fixed;top:0;z-index: 999;">
+  <div style="background-color: #333;display: block;width: 100%;height: 40px;position: fixed;top:0;z-index: 1;">
   </div>
   <div
-    style="background-color: 	#FAF9F6; margin: 20px;border-radius: 20px;margin-bottom: 50px;box-shadow: 0.5px 0.5px 10px black;">
-
+    style="background-color: white; margin: 20px;border-radius: 20px;margin-bottom: 50px;box-shadow: 0.5px 0.5px 10px black;">
+    <!-- <div class="loader"></div> -->
 
     <!-- TOP BAR -->
 
@@ -142,89 +66,28 @@
     </nav>
 
 
+    <div class="randomBS" style="display:none;"></div>
 
+    <embed src="images/404.gif" width="100%" style="margin-bottom: 500px;margin-top: 55px;">
+    <embed src="images/more-projects.gif" width="100%;margin-top: 55px;">
+    <div style="margin-bottom: 100px;">
 
-
-    <script src="js/navbar-drop-down.js"></script>
-
-    <!-- GO BOTTOM RELATIVE LINK -->
-
-
-
-    <!-- ------------------------------------------------------------------------------ -->
-    <!-- ------------------------------------------------------------------------------ -->
-    <!-- ------------------------------------------------------------------------------ -->
-
-
-    <!-- <h1 align="center">oUITS-Resources</h1> -->
-
-    <p class="highlights-5" align="center" style="color: rgba(0, 0, 0, 0.649);margin-top: 15px;">
-      <i>Browse resources for UITS Students</i>
+      <div class="navigation1" id="link-1"></div>
+      <script src="js\Links\drop-link-01.js"></script>
       <br>
-      <small style="font-size: small;">[mirror: <a href="https://ouits-res.netlify.app/"
-          style="color:rgba(4, 0, 128, 0.806);">Netlify</a> / <a href="https://b1tranger.github.io/oUITS-Resources/"
-          style="color:rgba(4, 0, 128, 0.806);">
-          GitHub</a>]</small>
-    </p>
-
-
-
-    <!-- -------------------------------------------------------------------- -->
-    <!-- -------------------------------------------------------------------- -->
-    <!-- -------------------------------------------------------------------- -->
-
-
-
-    <br>
-
-
-    <div class="section"
-      data-faq="If you feel like the resources are lacking, and you can solve that, don't be shy and share your resources!">
-      <div class="faq-icon">?</div>
-      <div class="faq-box"></div>
+      <div class="navigation2" id="link-2"></div>
+      <script src="js\Links\drop-link-02.js"></script>
+      <br>
+      <div class="navigation3" id="link-3"></div>
+      <script src="js\Links\drop-link-03.js"></script>
+      <br>
+      <div class="navigation4" id="link-4"></div>
+      <script src="js\Links\drop-link-04.js"></script>
+      <br>
+      <div class="navigation5" id="link-5"></div>
+      <script src="js\Links\drop-link-99.js"></script>
+      <div class="loader"></div>
     </div>
-
-    <!-- -------------------------------------------------------------------- -->
-
-
-
-
-    <!-- -------------------------------------------------------------------- -->
-    <!-- -------------------------------------------------------------------- -->
-    <!-- -------------------------------------------------------------------- -->
-
-
-
-    <div style="justify-content: center;display:flex;margin-top: 100px;margin-bottom: 50px;">
-      <hr style="border: 5px solid rgba(0, 0, 0, 0.411);
-  border-radius: 5px;margin-left: 50px;margin-right: 50px;margin-bottom: 20px;min-width: 200px;width:70%">
-    </div>
-
-
-    <div class="topnav-2" style="margin: auto;margin-bottom: 50px;">
-      <div class="dropdown">
-        <button class="dropbtn" onclick="toggleDropdown(this)"
-          style="background-color: rgba(87, 165, 142, 0.521);width: 200px;padding: 15px;border-radius: 10px;color: black;border: 1px solid black;box-shadow: 1px 1px 10px;">More
-          Projects</button>
-        <div class="dropdown-content">
-          <div class="navigation1"></div>
-          <script src="js\Links\drop-link-01.js"></script>
-
-          <div class="navigation2"></div>
-          <script src="js\Links\drop-link-02.js"></script>
-
-          <div class="navigation3"></div>
-          <script src="js\Links\drop-link-03.js"></script>
-
-          <div class="navigation4"></div>
-          <script src="js\Links\drop-link-04.js"></script>
-
-          <div class="navigation5"></div>
-          <script src="js\Links\drop-link-99.js"></script>
-        </div>
-      </div>
-    </div>
-
     <!-- ---------------------------------------------------- -->
 
     <div class="container" style="width: 90%;max-width: 500px;">
@@ -303,14 +166,6 @@
 
 
 
-
-
-
-
-
-
-
-
       <!-- <div style="justify-content: center;display:flex;">
         <hr
           style="border: 5px solid rgba(0, 0, 0, 0.619);
@@ -319,10 +174,8 @@
 
       <!-- TABLE FOR SOCIALS AND END CREDIT -->
 
-      <br>
-      <br><br>
-      <br><br>
-      <br>
+
+      <br><br><br>
       <!-- END CREDIT  -->
       <div align="center">
         <div>
@@ -355,7 +208,7 @@
 
 
 
-        <div style="margin-bottom: 20px;margin-top: 10px;">
+        <div style="margin-bottom: 10px;margin-top: 10px;">
           <!-- BOTTOM CREDITS -->
           <p align=center style="color:rgba(0, 0, 0, 0.422);width: 80%;max-width:550px;font-size: small;"><small
               style="font-size: x-small;"><b>UNOFFICIAL</b>
@@ -376,31 +229,26 @@
 
 
 
-      <br>
-      <br>
-
-
-
-
       <script src="js/faq.dropdown.js"></script>
       <script src="js/faq.tooltip.js"></script>
 
 
-      <!-- -------------------------------------------------------------------- -->
+      <!-- <h1 align="center">oUITS-Resources</h1> -->
 
-      <!-- TO WORK OFFLINE -->
-
-      <!-- <script src="offline.js"></script> -->
-
-      <script>
-        if ('serviceWorker' in navigator) {
-          navigator.serviceWorker.register('/service-worker.js');
-        }
-      </script>
-
-
+      <p class="highlights-5" align="center" style="color: rgba(0, 0, 0, 0.649);margin-top: 15px;">
+        <!-- <i>Browse resources for UITS Students</i> -->
+        <br>
+        <small style="font-size: small;">[mirror: <a href="https://ouits-res.netlify.app/"
+            style="color:rgba(4, 0, 128, 0.806);">Netlify</a> / <a href="https://b1tranger.github.io/oUITS-Resources/"
+            style="color:rgba(4, 0, 128, 0.806);">
+            GitHub</a>]</small>
+      </p>
+      <br>
 
     </div>
+
+
+
     <div class="navbar-5">
       <p align=center style="color:rgba(255, 255, 255, 0.776);"><i>oUITS Resources</i></p>
       </font>
