--- a/Extracurriculars.html
+++ b/Extracurriculars.html
@@ -136,12 +136,12 @@
 
                 <tr>
                     <td style="max-width: 300px;margin: auto;border-radius: 20px;">
-                        <a href="page-depth-01/CP-aux.html" class="cell-link">
+                        <a href="D1/CP-aux.html" class="cell-link">
                             Programming
                     </td>
 
                     <td style="max-width: 300px;margin: auto;margin-top: 10px;border-radius: 20px;">
-                        <a href="page-depth-01/Curated-Resources.html" class="cell-link">
+                        <a href="D1/Curated-Resources.html" class="cell-link">
                             Curated Resources
                         </a>
                     </td>
@@ -193,7 +193,7 @@
                     <td style="margin-left: auto;
     margin-right: auto;">
                         <!-- <p> -->
-                        <a class="cell-link" href="page-depth-01/page-depth-02/My-guides.html">
+                        <a class="cell-link" href="D1/My-guides.html">
                             b1tranger @YT
                         </a>
                         <!-- </p> -->
