--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
 
     <div class="randomBS" style="display:none;"></div>
 
-    <embed src="images/404.gif" width="100%" style="margin-bottom: 300px;margin-top: 55px;">
+    <embed src="images/404.gif" width="100%" style="margin-top: 55px;">
+      <br><br><br><br><br><br><br><br><br><br><br>
     <embed src="images/more-projects.gif" width="100%;margin-top: 55px;">
     <div style="margin-bottom: 100px;">
 
