--- a/Academics.html
+++ b/Academics.html
@@ -21,8 +21,7 @@
 
     <div style="background-color: #333;display: block;width: 100%;height: 40px;position: fixed;top:0;z-index: 1;">
     </div>
-    <div
-        style="background-color: #FAF9F6; margin: 20px;border-radius: 20px;margin-bottom: 50px;box-shadow: 0.5px 0.5px 10px black;z-index: 99999;">
+    <div style="background-color: #FAF9F6; margin: 20px;border-radius: 20px;margin-bottom: 50px;box-shadow: 0.5px 0.5px 10px black;z-index: 99999;">
 
         <nav class="navbar">
             <!-- <div id="nav-container" > -->
@@ -38,21 +37,10 @@
                 </ul>
             </div>
         </nav>
-        <!-- <script>
-            window.addEventListener('scroll', function () {
-                const navHide = document.getElementById('nav-container');
-                if (window.scrollY > 0) {
-                    nav.classList.add('scrolled');
-                }
-                else {
-                    nav.classList.remove('scrolled');
-                }
-            });
-
-        </script> -->
+        
 
         <br><br><br><br><br><br><br><br><br>
-       
+
 
         <div class="section"
             data-faq="If you feel like the resources are lacking, and you can solve that, don't be shy and share your resources!">
@@ -193,7 +181,7 @@
             <div class="faq-box"></div>
         </div>
 
-        <div class="container-5" style="width:76%;max-width: 800px;margin-top: 50px; background-color: #1B262C;">
+        <div class="container-5" style="width:85%;max-width: 800px;margin-top: 50px; background-color: #1B262C;">
 
 
             <!-- -------------------------------------------------------------------- -->
