fixed some overflow and faq

--- a/Extracurriculars.html
+++ b/Extracurriculars.html
@@ -585,14 +585,12 @@
 
         <!-- ---------------------------------------------------------- -->
 
-        <br><br><br> <br><br><br>
-        <br>
-        <br><br>
-        <br><br>
-        <br><br>
-        <br><br>
-        <br><br>
-        <br>
+        <br><br><br> 
+        
+
+        <script src="js/faq.dropdown.js"></script>
+        <script src="js/faq.tooltip.js"></script>
+
         <!-- END CREDIT  -->
         <div align="center">
             <div>
