added hover effects to home/ more projects

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       <br>
       <div class="navigation5" id="link-5"></div>
       <script src="js\Links\drop-link-99.js"></script>
-      <div class="loader"></div>
+      <!-- <div class="loader"></div> -->
     </div>
     <!-- ---------------------------------------------------- -->
 
