tried to fix references table

--- a/References.html
+++ b/References.html
@@ -228,7 +228,7 @@
                 <!-- ----------------------------------------------------------------------- -->
 
                 <!-- ----------------------------------------------------------------------- -->
-                <div class="table-container" style="padding-bottom: 20px;">
+                <div class="table-container" style="padding-top: 20px;padding-bottom: 20px;">
                     <table>
                         <thead>
                             <tr>
