--- a/Extracurriculars.html
+++ b/Extracurriculars.html
@@ -252,12 +252,12 @@
                 </div> -->
                     <div class="link-item">
                         <a href="https://www.youtube.com/@gowithhabib" target="_blank">
-                            Habibur Rahman (Batch-??)
+                            Habibur Rahman (CSE37)
                         </a>
                     </div>
                     <div class="link-item">
                         <a href="https://www.youtube.com/@safridbhuiyan" target="_blank">
-                            Safrid Bhuiyan (Batch-53)
+                            Safrid Bhuiyan (CSE53)
                         </a>
                     </div>
                     <div class="link-item">
@@ -266,8 +266,8 @@
                         </a>
                     </div>
                     <div class="link-item">
-                        <a href="#" target="_blank">
-                            #
+                        <a href="https://www.youtube.com/@freecselearning" target="_blank">
+                            Fazle Rabbi (MSc)
                         </a>
                     </div>
                     <div class="link-item">
