--- a/index.html
+++ b/index.html
@@ -66,10 +66,14 @@
     </nav>
 
 
-    <div class="randomBS" style="display:none;"></div>
-
-    <embed src="images/404.gif" width="100%" style="margin-top: 55px;">
-      <br><br><br><br><br><br><br><br><br><br><br>
+    <div class="randomBS" style="display:none;">
+      <embed src="images/mobile.ouits.gif.gif" width="100%"
+        style="margin-top: 55px;">
+      </div>
+    <div class="randomBS-2">
+      <embed src="images/desktop.ouits.gif.gif" width="100%" style="margin-top: 55px;">
+    </div>
+    <br><br><br><br><br><br><br><br><br><br><br>
     <embed src="images/more-projects.gif" width="100%;margin-top: 55px;">
     <div style="margin-bottom: 100px;">
 
