--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
 
 
     <div class="randomBS" style="display:none;">
+      <hr style="color: transparent;margin-bottom: 100px;">
       <embed src="images/mobile.ouits.gif.gif" width="100%"
         style="margin-top: 55px;">
       </div>
