--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 <body style="background-color: #333;z-index: -1;">
 
-  <div style="background-color: #333;display: block;width: 100%;height: 40px;position: fixed;top:0;z-index: 1;">
+  <div style="background-color: #333;display: block;width: 100%;height: 40px;position: fixed;top:0;z-index: 2;">
   </div>
   <div
     style="background-color: white; margin: 20px;border-radius: 20px;margin-bottom: 50px;box-shadow: 0.5px 0.5px 10px black;">
@@ -76,7 +76,7 @@
     </div>
     <br><br><br><br><br><br><br><br><br><br><br>
     <embed src="images/more-projects.gif" width="100%;margin-top: 55px;">
-    <div style="margin-bottom: 100px;">
+    <div style="margin-bottom: 100px;margin: auto;max-width: 600px;">
 
       <div class="navigation1" id="link-1"></div>
       <script src="js\Links\drop-link-01.js"></script>
@@ -96,7 +96,7 @@
     </div>
     <!-- ---------------------------------------------------- -->
 
-    <div class="container" style="width: 90%;max-width: 500px;">
+    <div class="container" style="width: 90%;max-width: 500px;margin-top: 100px;">
       <div class="dropdown-container resources" style="border-radius: 20px;">
         <div class="dropdown-header2" style="background-color: #c91c1c;">
           <p></p>Blood Donation Portal
