--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   <div style="background-color: #333;display: block;width: 100%;height: 40px;position: fixed;top:0;z-index: 2;">
   </div>
   <div
-    style="background-color: white; margin: 20px;border-radius: 20px;margin-bottom: 50px;box-shadow: 0.5px 0.5px 10px black;">
+    style="background-color: #fdfdfd; margin: 20px;border-radius: 20px;margin-bottom: 50px;box-shadow: 0.5px 0.5px 10px black;">
     <!-- <div class="loader"></div> -->
 
     <!-- TOP BAR -->
@@ -74,8 +74,8 @@
     <div class="randomBS-2">
       <embed src="images/desktop.ouits.gif.gif" width="100%" style="margin-top: 55px;">
     </div>
-    <br><br><br><br><br><br><br><br><br><br><br>
-    <embed src="images/more-projects.gif" width="100%;margin-top: 55px;">
+    
+    <embed src="images/more-projects.gif" width="100%;">
     <div style="margin-bottom: 100px;margin: auto;max-width: 600px;">
 
       <div class="navigation1" id="link-1"></div>
